--- a/app/src/styles/Account.css
+++ b/app/src/styles/Account.css
@@ -1,5 +1,57 @@
-.accounts{
+.accounts {
     margin: 0 auto;
-   width: 700px;
-   height: 100vh;
+    width: 800px;
+    height: 100vh;
+    margin: 0 24%;
+}
+
+.accountUp {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.accountUp h1 {
+    margin-top: 12px;
+}
+
+.account-title {
+    font-size: 22px;
+}
+
+.newAccountBtn {
+    width: 120px;
+    height: 30px;
+    color: #fff;
+    background-color: #007CFF;
+    border: none;
+    border-radius: 3px;
+}
+
+
+.main-container {
+    margin-top: 15px;
+
+}
+
+.main__total {
+    width: 100%;
+    height: 50px;
+    background-color: #D3ECF3;
+    border-radius: 3px;
+}
+
+.main__total-title {
+    padding: 8px 0 0 35px;
+    color: #41797a;
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.main__hr{
+    background-color: #919191;
+    height: 0.9px;
+    border: none;
+    margin-top: 10px;
 }
