--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -19,10 +19,10 @@
       cursor: pointer;
       position: relative;
       text-decoration: none;
-      border: 2px solid white;
-      color: #ca734e;
-      padding: 8px;
-      border-radius: 7px;
+      border: 3px solid white;
+      color: #e18158;
+      padding: 9px;
+      border-radius: 6px;
       font-family: "ManropeSemiBold", sans-serif;
     }
 
